[build-system]
build-backend = "poetry.core.masonry.api"
requires = [
  "poetry-core>=2",
]

[project]
name = "deepl-cli"
version = "1.0.0"
description = "DeepL Translator CLI without API Key"
readme = "README.md"
keywords = [
  "cli",
  "deepl",
  "translate",
]
license = { text = "MIT" }
authors = [
  { name = "eggplants", email = "w10776e8w@yahoo.co.jp" },
]
requires-python = ">=3.9,<4"
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
dependencies = [
  "install-playwright>=0.1,<0.2",
  "playwright>=1.49.1,<2",
]
urls.Repository = "https://github.com/eggplants/deepl-cli"
scripts.deepl = "deepl.main:main"

[tool.poetry]
requires-poetry = ">=2.0"
packages = [
  { include = "deepl" },
]

[tool.poetry.group.dev.dependencies]
mypy = ">=0.991,<1.15"
pre-commit = ">=2.20,<4.0"
taskipy = "^1.10.3"
pytest = ">=7.2.2,<9.0.0"
pytest-cov = ">=4,<6"
pytest-asyncio = ">=0.21,<0.25"

[tool.poetry.requires-plugins]
poetry-plugin-shell = ">=1.0"

[tool.black]
line-length = 120
target-version = [
  'py39',
]

[tool.ruff]
lint.per-file-ignores."examples/*.py" = [
  "INP001", # File tests/test_*.py is part of an implicit namespace package. Add an __init__.py.
  "T201",   # `print` found
]
lint.per-file-ignores."main.py" = [
  "T201", # `print` found
]
lint.per-file-ignores."tests/test_*.py" = [
  "INP001", # File tests/test_*.py is part of an implicit namespace package. Add an __init__.py.
  "S101",   # Use of assert detected
]
lint.mccabe.max-complexity = 18

[tool.mypy]
pretty = true
python_version = "3.9"
show_error_codes = true
strict = true

[tool]

[tool.lint.ruff]
select = [
  "ALL",
]
ignore = [
  "D",
]
line-length = 120

[tool.taskipy.tasks]
test = "pytest --cov=deepl --cov-report=term"
"test:ci" = "task test --cov-report=xml:cov.xml"
lint = "pre-commit run -a"
profile = "python -m cProfile"
