[build-system]
build-backend = "hatchling.build"
requires = [ "hatchling", "uv-dynamic-versioning" ]

[project]
name = "deepl-cli"
description = "DeepL Translator CLI without API Key"
readme = "README.md"
keywords = [
  "cli",
  "deepl",
  "translate",
]
license = { text = "MIT" }
authors = [ { name = "eggplants", email = "w10776e8w@yahoo.co.jp" } ]
requires-python = ">=3.10,<4"
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
dynamic = [ "version" ]

dependencies = [
  "install-playwright>=0.1,<0.2",
  "playwright>=1.49.1,<2",
]
urls.Repository = "https://github.com/eggplants/deepl-cli"
scripts.deepl = "deepl.main:main"

[dependency-groups]
dev = [
  "pymarkdownlnt>=0.9.33",
  "pyproject-fmt>=2.11.1",
  "pytest>=9.0.2",
  "pytest-asyncio>=1.3",
  "pytest-cov>=7",
]
docs = [
  "pdoc>=16",
]

[tool.hatch.version]
# tool.hatch.version.source is not listed in official schema.
# https://github.com/ninoseki/uv-dynamic-versioning/issues/21
source = "uv-dynamic-versioning"

[tool.hatch.build.targets.sdist]
include = [ "deepl" ]

[tool.hatch.build.targets.wheel]
include = [ "deepl" ]

[tool.uv]
preview = true
default-groups = [
  "dev",
  "docs",
]
exclude-newer = "P7D"

[tool.ruff]
line-length = 120
format.indent-style = "space"
format.quote-style = "double"
lint.select = [ "ALL" ]
lint.ignore = [ "COM812" ]
lint.per-file-ignores."examples/*.py" = [
  "D",
  "INP001", # Add an __init__.py.
  "T201",   # `print` found
]
lint.per-file-ignores."main.py" = [
  "T201", # `print` found
]
lint.per-file-ignores."tests/*.py" = [
  "D",
  "S101", # Use of assert detected
]
lint.pydocstyle.convention = "google"

[tool.uv-dynamic-versioning]
vcs = "git"
style = "semver"
fallback-version = "0.0.0"
