[metadata]
name = deepl-cli
version = attr: deepl.__version__
description = DeepL Translator CLI without API Key
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/eggplants/deepl-cli
license = MIT
author = eggplants
author_email = w10776e8w@yahoo.co.jp
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
install_requires =
    pyppeteer>=1.0.2
packages_data =
    deepl = py.typed
python_requires = >= 3.7

[options.entry_points]
console_scripts =
    deepl = deepl.main:main

[options.extras_require]
dev =
    flake8-black>=0.3.2
    mypy>=0.931
    setuptools>=60.9.3
    types-setuptools>=57.4.9
    pytest>=7.0.1

[isort]
profile = black

[flake8]
indent-size = 4
max-line-length = 120

[mypy]
python_version = 3.9
show_error_codes = True
pretty = True
strict = True
