[metadata]
name = deepl_cli
version = attr: deepl.__version__
description = DeepL Translator CLI without API Key
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/eggplants/deepl-cli
author = eggplants
author_email = w10776e8w@yahoo.co.jp
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
packages = find:
install_requires =
    install-playwright
    playwright>=1.29.0
python_requires = >=3.8
packages_data =
    deepl = py.typed

[options.entry_points]
console_scripts =
    deepl = deepl.main:main

[options.extras_require]
dev =
    mypy>=0.991
    pre-commit>=2.20.0
    pytest
    pytest-cov

[isort]
profile = black

[flake8]
indent-size = 4
max-line-length = 120

[mypy]
python_version = 3.8
show_error_codes = True
pretty = True
strict = True
